[project]
name = "benchmarking"
version = "0.2.0"
description = "Tools for running benchmarks"
requires-python = "==3.13.*"
dependencies = [
    "pairinteraction>=1.4.0",
    "pandas>=2.2.3",
    "py-cpuinfo>=9.0.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
benchmark = "benchmarking:run"

[tool.uv.sources]
pairinteraction = { index = "test-pypi" } # alternative: { path = "../../" }
[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
explicit = true
