# SPDX-FileCopyrightText: 2025 PairInteraction Developers
# SPDX-License-Identifier: LGPL-3.0-or-later

[project]
name = "benchmarking"
version = "0.2.0"
description = "Tools for running benchmarks"
requires-python = "==3.12.*"
dependencies = [
    "pairinteraction>=1.4.0",
    "pandas>=2.2.3",
    "py-cpuinfo>=9.0.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
mypy = [
  "mypy >= 1.14",
  "types-seaborn >= 0.13.2",
  "pandas-stubs >= 2.2.3"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
benchmark = "benchmarking:run"

# if you want to use the package from test-pypi or a local path, uncomment the following lines
# [tool.uv.sources]
# pairinteraction = { index = "test-pypi" } # alternative: { path = "../../" }
# [[tool.uv.index]]
# name = "test-pypi"
# url = "https://test.pypi.org/simple"
# explicit = true
