[project]
name = "database-tools"
version = "0.1.0"
description = "Tools for shrinking and optimizing the parquet database files."
requires-python = ">=3.9"
dependencies = [
    "duckdb >= 1.0.0"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
shrink = "database_tools:shrink"
optimize = "database_tools:optimize"
