# SPDX-FileCopyrightText: 2024 Pairinteraction Developers
# SPDX-License-Identifier: LGPL-3.0-or-later

[project]
name = "dbmanager"
version = "0.1.0"
description = "Tools for shrinking and optimizing the parquet database files."
requires-python = ">=3.9"
dependencies = [
    "duckdb >= 1.1.3",
    "packaging>=24.2",
]

[project.optional-dependencies]
mypy = [
  "mypy >= 1.14"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
shrink = "dbmanager:shrink"
optimize = "dbmanager:optimize"
